add solarized color scheme and powerline fonts

--- a/README
+++ b/README
@@ -5,3 +5,6 @@ My dotfiles
 .macos
 
 Launch vim and run :PluginInstall
+Apply iterm colors in iTerm through iTerm -> preferences -> profiles -> colors -> load presets.
+Set font in iTerm (14px is my personal preference) (iTerm -> Preferences -> Profiles -> Text -> Change Font).
+Restart iTerm
