add alfred setup instructions

--- a/README
+++ b/README
@@ -7,6 +7,14 @@ scripts/zsh.sh
 scripts/npm.sh
 scripts/.macos
 
+### Alfred
+* Register Powerpack License
+* Disable Spotlight, replace with Alfred 3
+    * Remove Spotlight shortcut by opening Keyboard > Shortcuts > Spotlight > Show Spotlight Search
+    * Change Alfred hotkey to command + space
+* Set up Settings Syncing
+    * Advanced > Syncing > Set Sync Folder
+
 Launch vim and run :PluginInstall
 Sync iterm and alfred with settings in dropbox.  Restart.
 Complete checklist.md
